--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "client",
+  "name": "personalportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
+    "axios": "^0.27.2",
+    "emailjs-com": "^3.2.0",
+    "font-awesome": "^4.7.0",
+    "framer-motion": "^6.3.4",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.3.1",
+    "react-recaptcha": "^2.3.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
+    "react-viewport-height": "^1.2.0",
+    "sass": "^1.52.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.73.0",
+    "webpack-merge": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "format:lint": "eslint ./src --ext .js",
-    "format:prettier": "prettier --write \"src/**/*.js\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.jss\" --fix",
-    "format": "yarn format:prettier && yarn format:lint && yarn lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -44,13 +49,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "styled-components": "^5"
-  },
-  "devDependencies": {
-    "eslint": "^8.20.0",
-    "eslint-plugin-react": "^7.30.1",
-    "gh-pages": "^4.0.0"
   }
 }
